Author the authorization endpoint and prove the event path end to end
Authorization service:
- Add POST /authorizations, aligning the declined outcome with its documented
  HTTP status, and report a wrapped send failure by the type it actually names.
- Align the cross-reference decline rule with reject reason 0100 from the
  1500-A-LOOKUP-XREF paragraph of CBTRN02C.
- Bind the outbox relay to configuration and cut its coupling to the contracts
  library.

Account service:
- Answer an account read that resolves nothing with the text COACTVWC builds for
  a miss, carried through the record mapper and the OpenAPI description.

Fraud detection service:
- Document the service in full, including its absent COBOL ancestor, its five
  meters, its risk rules and both of its dead-letter routes.

Tests:
- Prove that the account and fraud services commit a record change and its outbox
  row together, that the relay publishes each row once, and that one authorized
  event yields exactly one fraud assessment event.
- Assert the fraud service's effective configuration, and its five registered
  meters, from a context started with no broker reachable.
- Pin the dead-letter metadata widths taken from the ABEND-DATA layout.
- Cover the authorization chain's composition through injected rules, including
  the check-digit and account-status checks the source deliberately omits.
- Verify that online bill payment diverges from batch posting, and that the
  CBACT04C interest rate rules hold alongside the cycle-close carve-out.
- Assert the cycle close and the account update orchestration against the
  COACTUPC paragraphs they reproduce.